@startuml
'https://plantuml.com/class-diagram

abstract class Category {
    -name: String

    +getName(): String
    +abstract getAllocationPerMonth(): int
    +abstract setAllocationPerMonth(): int
    +abstract getBalance(): int
    abstract newMonth(): void
    +abstract addSpent(Spent): void
    +abstract getSpentList(): Spent[]
}
class StandardCategory {
    -allocationPerMonth: int
    -balance: int
    -spentList: List<Spent>

    +getSpentList(): Spent[]
    addSpent(Spent): void
    newMonth(): void
    +getBalance(): int
    +setAllocationPerMonth(int): void
    +getAllocationPerMonth() int
}
class BudgetCategory {
    -budget: Budget

    +getBudget(): Budget
    +getAllocationPerMonth(): int
    +setAllocationPerMonth(): int
    +getBalance(): int
    newMonth(): void
    +addSpent(Spent): void
    +getSpentList(): Spent[]
}
class Budget {
    -name: String
    -allocationPerMonth: int
    -balance: int
    -categories: List<Category>

    +getName(): String
    +getAllocationPerMonth(): int
    +setAllocationPerMonth(): int
    +getBalance(): int
    +newMonth(): void
    +addCategory(Category): void
    +removeCategory(Category): void
    +addSpent(Spent): void
}
class Spent {
    -category: Category
    -label: String
    -price: int

    +category(): Category
    +price(): int
    +label(): String
}

Category <|-- StandardCategory
Category <|-- BudgetCategory

Budget <--* BudgetCategory : -budget
Category "*" <-right-* "1" Budget : -categories
Category "1" <-right-* "1" Spent : -category
StandardCategory "1" *--> "0" Spent : -spentList

@enduml